navbar fixes (text now more visible despite opacity)

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -20,14 +20,12 @@ h1 {
   margin: 2em 0 0 0;
 }
 nav {
-  opacity: 0.5;
+  /*opacity: 0.5;*/
+  /*background-color: transparent !important;*/
 }
-/*nav ul li a{
+.navbutton {
   opacity: 1;
 }
-nav :hover{
-
-}*/
 #container{
   background-color: white;
   background-size: 50% 100%;
